--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Coches</title>
+    <title>Nubes</title>
     <link type="text/css" rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/coches.js" type="text/javascript"></script>
